跟新防止修改错误导致崩溃

--- a/config/db.properties
+++ b/config/db.properties
@@ -1,4 +1,4 @@
 jdbc.user=root
 jdbc.passowrd=000000
 jdbc.driverClass=com.mysql.jdbc.Driver
-jdbc.jdbcUrl=jdbc:mysql:///aba
+jdbc.jdbcUrl=jdbc:mysql:///aba?useUnicode=true&characterEncoding=UTF8
