--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -4,10 +4,9 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	id="WebApp_ID" version="2.5">
 	<display-name>Aba</display-name>
-	
 	<welcome-file-list>
-       <welcome-file>/JSPS/dataSimulater.html</welcome-file>
-    </welcome-file-list>
+	<welcome-file>index.jsp</welcome-file>
+	</welcome-file-list>
 
 	<!-- 配置 Spring IOC 容器 -->
 	<context-param>
@@ -36,14 +35,14 @@
 	<filter>
 		<filter-name>characterEncodingFilter</filter-name>
 		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
-		 <init-param>
+		<init-param>
 			<param-name>encoding</param-name>
 			<param-value>UTF-8</param-value>
-		</init-param> 
+		</init-param>
 	</filter>
 	<filter-mapping>
 		<filter-name>characterEncodingFilter</filter-name>
-		<url-pattern>/</url-pattern>
+		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 	<!-- 为了使用SpringMVC框架实现REST，需配置 HiddenHttpMethodFilter -->
 	<filter>
